rss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
  namespace: news
  labels:
    app: freshrss-server
spec:
  selector:
    matchLabels:
      app: freshrss-server
  replicas: 1
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: freshrss-server
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: freshrss-server
        image: freshrss/freshrss:1.28.1
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - mountPath: /data
            name: data
            readOnly: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: news-data
            readOnly: false
