rss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss-service
  namespace: news
  labels:
    app: freshrss-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: freshrss-server
